[package]
name    = "module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
crypto       = { path = "../crypto" }
thiserror    = "2.0.17"
wasm-macros  = { path = "../macros" }
wasm-bindgen = "0.2.122"

[build-dependencies]
crypto = { path = "../crypto" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
